# virtualTubers

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PROJECT_CLAUDE.md  README.md  docker-compose.yml  install.ps1  install.sh  pytest.ini  requirements.txt  startup.sh
repos/ascii-avatar/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  install.sh  pyproject.toml
repos/ascii-avatar/.github/: PULL_REQUEST_TEMPLATE.md
repos/ascii-avatar/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
repos/ascii-avatar/docs/: agent-setup.md
repos/ascii-avatar/docs/plans/: 2026-03-23-ascii-avatar-design.md  2026-03-23-ascii-avatar-implementation.md  2026-03-23-voice-channel-design.md  2026-03-23-voice-loop-fix.md  2026-03-26-layered-2.5d-avatar.md  2026-03-28-avatar-agent-implementation.md
repos/ascii-avatar/docs/specs/: 2026-03-26-layered-2.5d-avatar-design.md  2026-03-28-avatar-agent-interaction-model.md
repos/ascii-avatar/scripts/: claude-hook-event.py  claude-hook-speak.py  demo.sh  generate_layers.py  install.sh  setup-hooks.sh  setup-tmux.sh
repos/ascii-avatar/src/avatar/: agent.py  (+10 more)
repos/ascii-avatar/tests/: test_agent.py  test_agent_integration.py  test_agent_prompt.py  test_audio_player.py  test_boot.py  test_bridge.py  test_elevenlabs_engine.py  test_event_bus.py  test_frames.py  test_generate_layers.py  test_hook_event.py  test_integration.py  test_kokoro_engine.py  test_layered.py  test_mouth_sync.py  test_personas.py  test_piper_engine.py  test_renderer.py  test_session_tracker.py  test_state_machine.py
(+182 files in other folders)
